adjusted some alignment issues

--- a/Hero Kids/Hero-KidsStyle.css
+++ b/Hero Kids/Hero-KidsStyle.css
@@ -4,27 +4,28 @@
     margin-inline: auto;
     position: relative;
     text-align: center;
+    min-width: 226px;
 }
-.charsheet input.sheet-title {
-    width: 198px;
-    height: 40px!important;
-    font-size: 150%!important;
-}
-.charsheet input.sheet-title2 {
-    width: 199px;
-    height: 40px!important;
-    font-size: 150%!important;
-}
+
+.charsheet input.sheet-title,
+.charsheet input.sheet-title2,
 .charsheet input.sheet-title3 {
-    width: 212px;
-    height: 40px!important;
-    font-size: 150%!important;
+    width: 230px;
+    height: 40px !important;
+    margin-bottom: 2px;
+    float: right;
+    font-size: 150% !important;
 }
+
 .charsheet textarea.sheet-special {
-    width: 90%;
-    height: 75px!important;
-    text-overflow: scroll;
-    font-size: 150%!important;
+    font-size: 150% !important;
+    height: 70px;
+    left: 25px;
+    min-height: 70px;
+    overflow-y: auto;
+    position: relative;
+    resize: vertical;
+    width: 91%;
 }
 .charsheet button.sheet-big {
     height: 55px!important;
@@ -247,6 +248,13 @@ div[class^="sheet-section"] {
     background: radial-gradient(#f6f6f6, #dfdfdf);
 }
 
+.charsheet hr {
+    margin-top: 2px;
+    margin-bottom: 5px;
+    border-top: 1px solid #000;
+    opacity: .5;
+}
+
 .charsheet h1 {
     color: #000;
     display: inline;
@@ -258,12 +266,11 @@ div[class^="sheet-section"] {
 }
 
 .charsheet h2 {
-    line-height: normal;
-    text-align: center;
+    color: #000;
     display: inline;
     font-family: Arial;
     font-size: 22px;
-    color: #000;
+    text-align: center;
 }
 
 .ui-dialog .charsheet button[type=roll] {
@@ -297,7 +304,7 @@ div[class^="sheet-section"] {
     align-items: center;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: 3em 4em 3.5em;
+    grid-template-rows: 2.5em 4em 3em;
     text-align: center;
     width: fit-content;
 }
@@ -306,16 +313,21 @@ div[class^="sheet-section"] {
     align-items: center;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-    grid-template-rows: 3em 4em 3.5em;
+    grid-template-rows: 2.5em 4em 3em;
     text-align: center;
     width: fit-content;
+    margin-bottom: 5px;
 }
 
 .charsheet .sheet-grid-six {
     align-items: center;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
-    grid-template-rows: 3em 4em 3.5em;
+    grid-template-rows: 2.5em 4em 3em;
+    margin-inline: auto;
+    margin-right: 0;
+    min-width: 87%;
+    padding: 12px;
     text-align: center;
     width: fit-content;
 }
